--- a/backend/springex/test/src/main/webapp/assets/css/jquery.modal.css
+++ b/backend/springex/test/src/main/webapp/assets/css/jquery.modal.css
@@ -96,6 +96,8 @@
     font-weight: normal;
     line-height: normal;
     display: inline-block;
+    text-align:center;
+    color:white;
     margin: 0;
     padding: 0;
 }
@@ -184,9 +186,10 @@
 */	
 #modal-window .modal-box .modal-buttons {
     padding: 10px 15px;
-    text-align: right;
+    text-align: center;
     background-color: #f9f9f9;
     border-top: 1px solid #ddd;
+
 }
 
 #modal-window .modal-box .modal-buttons a.modal-btn {
