--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -1,12 +1,13 @@
 * {
     padding: 0;
     margin: 0;
+    /* border: 1px solid red; */
   }
   
   :root {
     --logoHeader: 60px;
     --sidebarNav: 120px;
-    --colorLogo: #2bb632;
+    --colorLogo: #85D457;
     --colorBar: #d2d7e0;
     --colorBarW: #b7bec7;
     --colorWhite: white;
@@ -84,7 +85,7 @@
     grid-area: header;
     display: flex;
     justify-content: space-between;
-    background: linear-gradient(90deg, #d6da1b 0%, #2bb632 100%);
+    background: linear-gradient(90deg, #E1E428 0%, #85D457 100%);
   }
   
   .kanban__header-search {
@@ -309,7 +310,8 @@
   }
   
   .kanban__sidebar {
-    height: 658px;
+    min-height: 900px;
+    height: auto;
     grid-area: sidebar;
     display: flex;
     flex-direction: column;
@@ -626,7 +628,7 @@
   .kanban__main-wrapper {
     background-color: var(--colorNav);
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
     margin: 0 50px 0 50px;
   }
@@ -634,7 +636,7 @@
   .kanban__main-wrapper-opacity {
     background-color: var(--colorNav);
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-wrap: wrap;
     margin: 0 50px 0 50px;
     opacity: 0.2;
@@ -672,6 +674,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 20px;
   }
   
   .card-wrapper__header {
