--- a/frontend/src/assets/css/layout/Footer.scss
+++ b/frontend/src/assets/css/layout/Footer.scss
@@ -2,8 +2,8 @@
 
 footer {
   clear: both;
-  width: 1280%;
-  background: #2bb632;
+  width: 100%;
+  background: #85D457;
   color: #FFF;
 
   p {
