--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -86,6 +86,7 @@
     display: flex;
     justify-content: space-between;
     background: linear-gradient(90deg, #E1E428 0%, #85D457 100%);
+    z-index: 5000;
   }
   
   .kanban__header-search {
@@ -473,6 +474,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
   }
   
   .kanban__nav-wrapper {
@@ -481,6 +483,7 @@
     justify-content: space-between;
     margin: 0 50px 0 50px;
     background-color: var(--colorNav);
+
   }
   
   .kanban__nav-name {
@@ -2192,3 +2195,48 @@ A HORIZONTAL event
     margin-left: 3px;
   }
 
+  
+  /* Dropdown Button */
+.dropbtn {
+  color: white;
+  padding: 0px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  z-index: 6000;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  border: black 1px solid;
+  position: absolute;
+  background-color: #E0FFE0;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  margin-top: 0px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #808080}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
