창현 21/12/17 ~ 초대 이메일 보내기

--- a/frontend/src/assets/css/component/project/ProjectModal.scss
+++ b/frontend/src/assets/css/component/project/ProjectModal.scss
@@ -133,6 +133,7 @@
             font-size: 20px;
             width: 700px;
             height: 120px;
+            overflow: auto;
             margin: 13px 20px 20px 20px;
         }
     }
@@ -169,4 +170,3 @@
         }
     }
 }
-
