--- a/frontend/src/assets/css/component/kanban/AddTask.scss
+++ b/frontend/src/assets/css/component/kanban/AddTask.scss
@@ -25,3 +25,13 @@
   position: relative;
   right: 4px;
 }
+
+.kanban-column {
+  display: inline-block !important;
+  width: 22.1875rem;
+  white-space: normal;
+  vertical-align: top;
+  margin-left: 1rem;
+}
+
+
