--- a/frontend/src/assets/css/layout/Logo.scss
+++ b/frontend/src/assets/css/layout/Logo.scss
@@ -1,18 +1,18 @@
 @charset "utf-8";
 
 .logo {
-    background-color: #888fdc;
     grid-area: logo;
     font-weight: 700;
     text-align: center;
     line-height: 60px;
     font-size: 20px;
-    color: white;
+    color: var(--colorWhite);
     cursor: pointer;
 
     img {
-      width: 125px;
-      height: 70px;
-      object-fit: fill;
+      height: 60px;
+      grid-area: logo;
+      display: flex;
+      object-fit: cover;
     }
   }
