--- a/frontend/src/assets/css/component/project/ProjectPeopleModal.scss
+++ b/frontend/src/assets/css/component/project/ProjectPeopleModal.scss
@@ -137,17 +137,91 @@
         }
     }
 
-    .team {
+    .team_wrapper {
         display: flex;
-        div {
+        //background-color: #e7fce7;
+        .team {
             width: 700px;
             height: 300px;
             overflow: auto;
             border-radius: 5px;
             border: 1px solid;
-            border-color:#dddddd;
-            background-color: #FFFFFF;
+            border-color:#fcfcf8;
+            background-color: #ffffff;
             margin: 13px 20px 20px 20px;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+                margin: 10px 10px 0px 10px;
+                border-radius: 5px;
+                border: 1px solid;
+                border-color:#dddddd;
+                height: 60px;
+
+                &:hover{
+                    border-color: #66e966;
+                    outline: 0;
+                    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0 , 0.08), 0 0 8px rgba(0, 0, 0 , 0.6);
+                    box-shadow: inset 0 1px 1px rgba(0, 0, 0 , 0.08), 0 0 8px rgba(0, 0, 0 , 0.6);
+                }
+
+                span {
+                    //display: flex;
+                    //border: 1px solid red;
+                    margin: 2px 2px 0px 2px;
+                    width: 100px;
+                    height: 55px;
+
+                    
+                }
+
+                .team_profile {
+                    i {
+                        margin-top: 5px;
+                        line-height: 1;
+                        font-size: 35px;
+                        color: #7c7ca8;
+                        width: 50px;
+                    }
+                }
+
+                .team_name {
+                    width: 400px;
+                    font-size: 20px;
+                    font-weight: 400;
+                    color: #7c7ca8;
+                    line-height: 2;
+                    width: 80px;
+                    
+                }
+
+                .team_email {
+                    width: 400px;
+                    font-size: 20px;
+                    font-weight: 400;
+                    color: #7c7ca8;
+                    line-height: 2;
+                    width: 200px;
+                }
+
+                .team_exclude {
+                    i {
+                        margin-top: 5px;
+                        line-height: 1;
+                        font-size: 35px;
+                        color: #7c7ca8;
+
+                        &:hover{
+                            font-size: 40px;
+                            color: #2a9600;
+                        }
+
+                    }
+                }
+
+                
+            }
         }
 
        
