--- a/frontend/src/component/kanban/Kanban.scss
+++ b/frontend/src/component/kanban/Kanban.scss
@@ -10,7 +10,7 @@
     font-weight: 400;
 } 
 
-ul      { list-style-type: none; padding: 0; margin: 0; } 
+ul      { list-style-type: none; padding: 0; margin-right: 15px; } 
 
 .kanban__main {
     background-color: var(--colorNav);
@@ -60,7 +60,7 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
     border-radius: 5px;
     background-origin: border-box;
     background-clip: content-box, border-box;
-    display: flex;
+    display: static;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 20px;
@@ -80,26 +80,15 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
 }
 
 .backlog_dots {
-    color: var(--colorBarW);
-    margin: 10px 10px 0 0;
+    color: black;
     cursor: pointer;
     font-size: 18px;
-    display: none;
 
-    i {
+    i {color: black;
         width: 20px;
     }
     
 }
-
-.backlog_dots:hover {
-    color: var(--colorLogo);
-}
-
-.card-wrapper:hover .backlog_dots {
-    display: flex;
-}
-
 
 .card-wrapper__footer {
     display: flex;
@@ -327,6 +316,7 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
     width: 260px;
     height: auto;
     margin-bottom: 10px;
+    margin-right: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -356,7 +346,7 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0 15px 10px;
+    margin: 17px 0px 0px 10px;
 }
 
 .card-color-low {
@@ -377,12 +367,11 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
     font-weight: 400;
 }
 
-.card__header-clear {
-    color: var(--colorBarW);
-    margin: 10px 10px 0 0;
+.card__header_clear {
+    color: grey;
+    margin: 5px 5px;
     cursor: pointer;
-    font-size: 18px;
-    display: none;
+    font-size: 30px;
 }
 
 .card__header-clear:hover {
@@ -396,21 +385,24 @@ ul      { list-style-type: none; padding: 0; margin: 0; }
 .card__title {
     margin: 5px;
     padding: 10px;
-    background: linear-gradient(45deg, hsl(0, 0%, 100%) 20%, #fdd8d8 80%);
-    //background-color: #fdd8d8;
+    //background: linear-gradient(45deg, hsl(0, 0%, 100%) 20%, #fdd8d8 80%);
+    //background-color: white;
+    background-color: #fdd8d8;
 }
 
 .card__text {
     font-size: 16px;
     font-weight: 400;
     word-wrap: break-word;
+    margin: 10px;
 }
 
 .card__date {
     font-size: 14px;
     font-weight: 400;
-    margin-top: 5px;
+    text-align: right;
     word-wrap: break-word;
+    margin: 10px;
 }
 .CheckList__add_check { 
     border: 1px dashed #bbb; 
