--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -86,7 +86,7 @@
     display: flex;
     justify-content: space-between;
     background: linear-gradient(90deg, #E1E428 0%, #85D457 100%);
-    z-index: 5000;
+    z-index: 10;
   }
   
   .kanban__header-search {
@@ -215,7 +215,8 @@
     justify-content: center;
     align-items: center;
     color: var(--colorWhite);
-    margin: 0 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 14px;
     font-weight: 300;
     width: 100px;
@@ -474,6 +475,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index: 5;
 
   }
   
@@ -2112,7 +2114,7 @@ A HORIZONTAL event
     color: var(--fc-neutral-text-color, #808080);
   }
 .fc {
-
+  margin: 10px 30px 50px 50px;
   /* popover */
 
 }
