--- a/frontend/src/assets/css/component/kanban/TaskSettingModal.scss
+++ b/frontend/src/assets/css/component/kanban/TaskSettingModal.scss
@@ -173,10 +173,11 @@
             //background: linear-gradient(to right, #a5c516, #5add32);
             border-radius: 5px;
             width: 170px;
-            height: 30px;
+            height: 40px;
             border: 1px solid transparent;
             padding: 8px 3px 2px 1px;
             margin: 20px;
+            font-size: 15px;
         }
         input {
             padding: 5px;
@@ -212,7 +213,7 @@
             //background: linear-gradient(to right, #a5c516, #5add32);
             border-radius: 5px;
             width: 135px;
-            height: 30px;
+            height: 40px;
             border: 1px solid transparent;
             padding: 8px 3px 2px 1px;
             margin: 20px;
@@ -250,7 +251,7 @@
             //background: linear-gradient(to right, #a5c516, #5add32);
             border-radius: 5px;
             width: 135px;
-            height: 30px;
+            height: 40px;
             border: 1px solid transparent;
             padding: 8px 3px 2px 1px;
             margin: 20px;
